--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,17 +1,3 @@
-# Terminal Setup
-set -g default-terminal "screen-256color"
-set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
-
-set-option -g prefix C-b
-
-set-option -g status-interval 5
-set-option -g automatic-rename on
-set-option -g automatic-rename-format '#{b:pane_current_path}'
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
-
-set -g status-position bottom
-set -g mouse on
-
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
@@ -24,28 +10,28 @@ bind k select-pane -U
 bind h select-pane -L
 bind l select-pane -R
 
-# Set up Powerline
-run-shell "powerline-daemon -q"
-source /usr/local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf
-
-# Window name from CWD
+# Options
+set-option -g prefix C-b
 set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 
- # List of plugins
+set -g status-position bottom
+set -g mouse on
+
+# Terminal Setup
+set -g default-terminal "screen-256color"
+set -g default-shell /usr/local/bin/fish
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
+
+# Set up Powerline
+source /usr/local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf
+
+# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @plugin 'jimeh/tmux-themepack'
-# set -g @themepack 'powerline/default/magenta'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.config/tmux/plugins/tpm/tpm'
-bind y run-shell "reattach-to-user-namespace -l zsh -c 'tmux show-buffer | pbcopy'"
-bind C-c run "tmux save-buffer - | pbcopy"  # Copy to OS X
