update config files

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -25,6 +25,13 @@ set-option -g automatic-rename-format '#{b:pane_current_path}'
 set -g status-position bottom
 set -g mouse on
 
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
+
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
+set -g @resurrect-strategy-nvim 'session'
+
 # To copy, left click and drag to highlight text in yellow, 
 # once you release left click yellow text will disappear and will automatically be available in clibboard
 # # Use vim keybindings in copy mode
@@ -49,6 +56,8 @@ source /usr/local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.config/tmux/plugins/tpm/tpm'
