--- a/.gitconfig
+++ b/.gitconfig
@@ -1,12 +1,14 @@
 [filter "lfs"]
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
 	required = true
+	process = git-lfs filter-process
 [user]
 	name = Benny Powers
 	email = web@bennypowers.com
 [core]
 	excludesfile = /Users/bennyp/.config/git/gitignore
+	editor=nvim
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path =
