--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,8 +1,12 @@
+set-environment -g PATH "/opt/homebrew/bin:/usr/local/bin:/bin:/usr/bin"
+
 # Terminal Setup
-set -g default-terminal "screen-256color"
+
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 set -g default-shell /usr/local/bin/fish
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
-set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 
 # split panes using | and -
 bind | split-window -h
@@ -34,7 +38,7 @@ set -g @resurrect-strategy-nvim 'session'
 
 # To copy, left click and drag to highlight text in yellow, 
 # once you release left click yellow text will disappear and will automatically be available in clibboard
-# # Use vim keybindings in copy mode
+# Use vim keybindings in copy mode
 setw -g mode-keys vi
 # Update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
