chore: organize plugins

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -60,8 +60,8 @@ source /usr/local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.config/tmux/plugins/tpm/tpm'
