fix: remove a bunch of tmux plugins

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -57,11 +57,11 @@ bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
 source /usr/local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.config/tmux/plugins/tpm/tpm'
+# run -b '~/.config/tmux/plugins/tpm/tpm'
