--- a/.config/input-remapper/beta_1.6.0-beta/config.json
+++ b/.config/input-remapper/beta_1.6.0-beta/config.json
@@ -1,6 +1,7 @@
 {
-    "version": "1.5.0",
+    "version": "1.6.0-beta",
     "autoload": {
+        "Logitech MX Ergo Multi-Device Trackball ": "Side Buttons Overview",
         "Griffin PowerMate": "Default"
     },
     "macros": {
