--- a/.config/nvim/lua/.luarc.json
+++ b/.config/nvim/lua/.luarc.json
@@ -1,100 +1,7 @@
 {
-    "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
-    "Lua.workspace.library": [
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/neodev.nvim/types/stable",
-        "/usr/share/nvim/runtime",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/opt/color-converter.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/opt/goto-preview",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/opt/marks.nvim",
-        "/home/bennyp/Developer/nvim-regexplainer",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/opt/nvim-web-devicons",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/opt/octo.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/opt/sqlite.lua",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/opt/telescope-frecency.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/opt/telescope-heading.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/opt/vim-hexokinase",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/LuaSnip",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/auto-session",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/bufferline.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/catppuccin",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-buffer",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-calc",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-cmdline",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-emoji",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-fish",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-git",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-npm",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-nvim-lsp",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-nvim-lsp-signature-help",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-nvim-lua",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-path",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-plugins",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-treesitter",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp-under-comparator",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/cmp_luasnip",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/dressing.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/fidget.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/git-conflict.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/github-nvim-theme",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/gitsigns.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/haskell-tools.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/impatient.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/indent-blankline.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/leaf.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/legendary.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/lsp-format.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/lsp-inlayhints.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/lsp-status.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/lsp-trouble.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/lsp_lines.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/lspkind-nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/lualine.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/lush.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/mason-lspconfig.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/mason.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/matchparen.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/mini.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/neo-tree.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/neodev.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/noctis.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nui.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/numbers.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-autopairs",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-biscuits",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-bufdel",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-cmp",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-lspconfig",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-luapad",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-notify",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-scrollbar",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-surround",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-treesitter",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-treesitter-context",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-treesitter-endwise",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-treesitter-textobjects",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-ts-autotag",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/nvim-ufo",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/oxocarbon-lua.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/packer.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/playground",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/plenary.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/popup.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/promise-async",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/query-secretary",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/replacer.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/rust-tools.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/schemastore.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/session-lens",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/silicon.lua",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/telescope.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/template-string.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/toggleterm.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/tokyonight.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/trouble.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/vim-illuminate",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/which-key.nvim",
-        "/home/bennyp/.local/share/nvim/site/pack/packer/start/winpick.nvim",
-        "${3rd}/luassert/library"
-    ],
-    "workspace.checkThirdParty": false
+  "workspace.library": [
+    "/home/bennyp/.local/share/nvim/lazy/neodev.nvim/types/stable",
+    "/usr/share/nvim/runtime/lua",
+    "${3rd}/luv/library"
+  ]
 }
