tmux: theme, etc

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,12 +1,9 @@
-set-environment -g PATH "/opt/homebrew/bin:/usr/local/bin:/bin:/usr/bin"
-
 # Terminal Setup
 
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
-set -g default-shell /usr/local/bin/fish
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+set -g default-shell $SHELL
 
 # split panes using | and -
 bind | split-window -h
@@ -29,39 +26,20 @@ set-option -g automatic-rename-format '#{b:pane_current_path}'
 set -g status-position bottom
 set -g mouse on
 
-set -g @continuum-restore 'on'
-set -g @continuum-boot 'on'
+# To copy, left click and drag to highlight text in yellow,
+# once you release left click yellow text will disappear
+# and will automatically be available in clibboard
 
-set -g @resurrect-save 'S'
-set -g @resurrect-restore 'R'
-set -g @resurrect-strategy-nvim 'session'
-
-# To copy, left click and drag to highlight text in yellow, 
-# once you release left click yellow text will disappear and will automatically be available in clibboard
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
-# Update default binding of `Enter` to also use copy-pipe
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
-bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
-bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
-bind -T copy-mode-emacs C-WheelUpPane   send-keys -X halfpage-up
-bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
-
-# Set up Powerline
-source /usr/local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf
 
 # List of plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'alexwforsythe/tmux-which-key'
+set -g @plugin 'erikw/tmux-powerline'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run -b '~/.config/tmux/plugins/tpm/tpm'
+run -b '~/.config/tmux/plugins/tpm/tpm'
