--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -40,6 +40,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'erikw/tmux-powerline'
+setenv -g TMUX_POWERLINE_THEME 'bubble'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.config/tmux/plugins/tpm/tpm'
