--- a/.config/btop/btop.conf
+++ b/.config/btop/btop.conf
@@ -50,14 +50,14 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc" and "gpu0" through "gpu5", separate values with whitespace.
-shown_boxes = "cpu mem net proc"
+shown_boxes = "cpu proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 1500
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
-proc_sorting = "memory"
+proc_sorting = "user"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
@@ -110,7 +110,7 @@ cpu_invert_lower = True
 cpu_single_graph = False
 
 #* Show cpu box at bottom of screen instead of top.
-cpu_bottom = False
+cpu_bottom = True
 
 #* Shows the system uptime in the CPU box.
 show_uptime = True
