--- a/.config/btop/btop.conf
+++ b/.config/btop/btop.conf
@@ -1,4 +1,4 @@
-#? Config file for btop v. 1.3.2
+#? Config file for btop v. 1.4.0
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
@@ -50,7 +50,7 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc" and "gpu0" through "gpu5", separate values with whitespace.
-shown_boxes = "cpu mem net proc"
+shown_boxes = "cpu proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 1500
@@ -110,7 +110,7 @@ cpu_invert_lower = True
 cpu_single_graph = False
 
 #* Show cpu box at bottom of screen instead of top.
-cpu_bottom = False
+cpu_bottom = True
 
 #* Shows the system uptime in the CPU box.
 show_uptime = True
