--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -10,7 +10,12 @@ gui:
 
 git:
   paging:
-    colorArg: never
-    pager: delta --paging=never
+    colorArg: always
+    pager: >
+      delta
+      --paging=never
+      --detect-dark-light=auto
+      --hyperlinks
+      --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
 
 quitOnTopLevelReturn: true
