--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -19,3 +19,28 @@ git:
       --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
 
 quitOnTopLevelReturn: true
+
+# catppuccin macchiatto
+theme:
+  activeBorderColor:
+    - '#74c7ec'
+    - bold
+  inactiveBorderColor:
+    - '#a6adc8'
+  optionsTextColor:
+    - '#89b4fa'
+  selectedLineBgColor:
+    - '#313244'
+  cherryPickedCommitBgColor:
+    - '#45475a'
+  cherryPickedCommitFgColor:
+    - '#74c7ec'
+  unstagedChangesColor:
+    - '#f38ba8'
+  defaultFgColor:
+    - '#cdd6f4'
+  searchingActiveBorderColor:
+    - '#f9e2af'
+
+authorColors:
+  '*': '#b4befe'
