--- a/.config/hypr/conf/hyprspace.conf
+++ b/.config/hypr/conf/hyprspace.conf
@@ -1,8 +1,8 @@
-exec-once = hyprpm enable Hyprspace
-
-# Toggle Hyprspace overview
-bind = SUPER, O, exec, hyprctl dispatch overview:toggle
-bind = ,mouse:276, exec, hyprctl dispatch overview:toggle
+# exec-once = hyprpm enable Hyprspace
+#
+# # Toggle Hyprspace overview
+# bind = SUPER, O, exec, hyprctl dispatch overview:toggle
+# bind = ,mouse:276, exec, hyprctl dispatch overview:toggle
 
 # Hyprspace plugin settings
 plugin {
