--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,7 +22,9 @@ monitor=,preferred,auto,auto
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_THEME,Catppuccin-Macchiato
+env = HYPRCURSOR_THEME,phinger-cursors-dark
+env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,phinger-cursors-dark
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = HYPRCURSOR_SIZE,24
@@ -36,7 +38,7 @@ env = XDG_DATA_DIRS,/usr/local/share:/usr/share:/var/lib/flatpak/exports/share:/
 #################
 
 source = ~/.config/hypr/conf/macchiatto.conf
-source = ~/.config/hypr/conf/hyprspace.conf
+source = ~/.config/hypr/conf/bindings.conf
 
 ###################
 ### PERMISSIONS ###
@@ -92,7 +94,7 @@ decoration {
 
     # Use dimming for inactive windows instead of transparency
     dim_inactive = true
-    dim_strength = 0.3
+    dim_strength = 0.1
 
     shadow {
         enabled = true
@@ -104,8 +106,10 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
+        size = 9
+        xray = true
         passes = 1
+        ignore_opacity = true
 
         vibrancy = 0.1696
     }
@@ -117,29 +121,30 @@ animations {
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = easeOutQuint,0.23,1,0.32,1
+    bezier = easeOutQuint,  0.23,1,   0.32,1
     bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
+    bezier = linear,        0,   0,   1,   1
+    bezier = almostLinear,  0.5, 0.5, 0.75,1.0
+    bezier = quick,         0.15,0,   0.1, 1
 
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
-    animation = specialWorkspace, 1, 2, easeOutQuint, slidevert
+    animation = global,           1, 2,   default
+    animation = border,           1, 1.16, easeOutQuint
+    animation = windows,          0, 1.16, easeOutQuint
+    animation = windowsIn,        0, 1.16, easeOutQuint, popin 87%
+    animation = windowsOut,       0, 1.49, linear,       popin 87%
+    animation = fadeIn,           1, 1.73, almostLinear
+    animation = fadeOut,          1, 1.46, almostLinear
+    animation = fade,             1, 1.16, quick
+    animation = layers,           0, 1.16, easeOutQuint
+    animation = layersIn,         0, 1.16, easeOutQuint, fade
+    animation = layersOut,        0, 1.5,  linear,       fade
+    animation = fadeLayersIn,     1, 1.79, almostLinear
+    animation = fadeLayersOut,    1, 1.39, almostLinear
+    animation = workspaces,       1, 1.94, almostLinear, fade
+    animation = workspacesIn,     1, 1.21, almostLinear, fade
+    animation = workspacesOut,    1, 1.94, almostLinear, fade
+    animation = specialWorkspace, 1, 2,    easeOutQuint, slidevert
+
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -197,100 +202,6 @@ device {
 }
 
 
-###################
-### KEYBINDINGS ###
-###################
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, uwsm app -- $terminal
-bind = $mainMod, Tab, cyclenext,
-bind = $mainMod SHIFT, Tab, cyclenext, prev
-bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, Q, exit,
-bind = $mainMod, F, exec, uwsm app -- $fileManager
-bind = $mainMod, E, exec, uwsm app -- $mail
-bind = $mainMod, C, togglefloating,
-bind = $mainMod, SPACE, exec, uwsm app -- bash -c "$menu"
-bind = $mainMod, F2, exec, uwsm app -- $cmd
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, U, togglesplit, # dwindle
-bind = $mainMod, B, exec, uwsm app -- $browser
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, j, movefocus, d
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, l, movefocus, r
-
-# Navigate workspaces with mainMod + arrow keys
-bind = $mainMod, Left, workspace, e-1
-bind = $mainMod, Right, workspace, e+1
-
-# Move window to workspace and follow
-bind = $mainMod SHIFT, Left, movetoworkspace, e-1
-bind = $mainMod SHIFT, Right, movetoworkspace, e+1
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume , exec, uwsm app -- wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume , exec, uwsm app -- wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute        , exec, uwsm app -- wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute     , exec, uwsm app -- wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp  , exec, uwsm app -- brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, uwsm app -- brightnessctl -e4 -n2 set 5%-
-
-# Requires playerctl
-bindl = , XF86AudioNext , exec, uwsm app -- playerctl next
-bindl = , XF86AudioPause, exec, uwsm app -- playerctl play-pause
-bindl = , XF86AudioPlay , exec, uwsm app -- playerctl play-pause
-bindl = , XF86AudioPrev , exec, uwsm app -- playerctl previous
-
-# Screenshots
-bind = $mainMod      , PRINT, exec, uwsm app -- hyprshot -m window
-bind =               , PRINT, exec, uwsm app -- hyprshot -m output
-bind = $mainMod SHIFT, PRINT, exec, uwsm app -- hyprshot -m region
-
-# Notifications
-bind = $mainMod, N, exec, uwsm app -- swaync-client -t
-
-# VM escape - force focus back to host when trapped in VM
-bind = $mainMod CTRL SHIFT, Escape, focuswindow, class:^(?!.*qemu).*$
-
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -303,8 +214,9 @@ bind = $mainMod CTRL SHIFT, Escape, focuswindow, class:^(?!.*qemu).*$
 
 # System monitor floating window
 windowrule = float,class:^floating-sysmon$
-windowrule = size 800 600,class:^floating-sysmon$
+windowrule = size 1600 1200,class:^floating-sysmon$
 windowrule = center,class:^floating-sysmon$
+windowrulev2 = float, title:^(.*Network Manager.*)$
 
 # Window swallowing is configured in misc section above
 
