--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -12,18 +12,22 @@
 $font = Monospace
 
 general {
-    hide_cursor = false
+    hide_cursor = true
 }
 
 # uncomment to enable fingerprint authentication
-# auth {
-#     fingerprint {
-#         enabled = true
-#         ready_message = Scan fingerprint to unlock
-#         present_message = Scanning...
-#         retry_delay = 250 # in milliseconds
-#     }
-# }
+auth {
+    pam {
+        enabled = true
+        module = hyprlock
+    }
+    fingerprint {
+        enabled = true
+        ready_message = Scan fingerprint to unlock
+        present_message = Scanning...
+        retry_delay = 250 # in milliseconds
+    }
+}
 
 animations {
     enabled = true
@@ -98,7 +102,7 @@ label {
     monitor =
     text = $LAYOUT[en,ru]
     font_size = 24
-    onclick = hyprctl switchxkblayout all next
+    # onclick = hyprctl switchxkblayout all next
 
     position = 250, -20
     halign = center
