--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
 ipc = off
-preload = /home/bennyp/Pictures/Wallpaper/Catppuccin/stars.jpg
-wallpaper = , /home/bennyp/Pictures/Wallpaper/Catppuccin/stars.jpg
+preload = /home/bennyp/Pictures/Wallpaper/Catppuccin/stars.5k.png
+wallpaper = , /home/bennyp/Pictures/Wallpaper/Catppuccin/stars.5k.png
