--- a/.config/xdg-desktop-portal/portals.conf
+++ b/.config/xdg-desktop-portal/portals.conf
@@ -1,5 +1,6 @@
 [preferred]
-default=hyprland;gtk;
+default=hyprland;gnome;gtk;
+# default=hyprland;gtk;
 org.freedesktop.impl.portal.FileChooser=gnome;
 org.freedesktop.impl.portal.RemoteDesktop=gnome;
 org.freedesktop.impl.portal.InputCapture=gnome;
