--- a/.config/uwsm/hyprland.ini
+++ b/.config/uwsm/hyprland.ini
@@ -17,3 +17,6 @@ gsettings-icons=gsettings set org.gnome.desktop.interface icon-theme "Catppuccin
 # Start the required background services
 xdg-user-dirs=xdg-user-dirs-update
 ssh-agent=ssh-agent --fish > ~/.ssh/agent.env
+
+# Start GNOME portal for file picker
+gnome-portal=/usr/libexec/xdg-desktop-portal-gnome
