--- a/.config/xdg-desktop-portal/portals.conf
+++ b/.config/xdg-desktop-portal/portals.conf
@@ -1,7 +1,5 @@
 [preferred]
-default=hyprland;gnome;gtk;
-# default=hyprland;gtk;
-org.freedesktop.impl.portal.FileChooser=gnome;
-org.freedesktop.impl.portal.RemoteDesktop=gnome;
-org.freedesktop.impl.portal.InputCapture=gnome;
+# default=hyprland;gnome;gtk;
+default=hyprland;wlr;gnome;gtk;
+# org.freedesktop.impl.portal.FileChooser=gnome;
 
